[package]
name = "wakeupscrew-service"
version = "0.0.1"
authors = ["catLee <leemyinghao@gmx.com>"]
edition = "2018"

[dependencies]
actix-web = {version = "2.0.0", features = ["rustls"]}
actix-rt = "1.1.1"
serde = "1.0.114"
regex = "1.3.9"
lazy_static = "1.4.0"
bytes = "0.5.5"
log = "0.4.8"
env_logger = "0.7.1"