[package]
authors = ["catLee <leemyinghao@gmx.com>"]
edition = "2018"
name = "wakeupscrew-service"
version = "0.0.1"

[dependencies]
actix-rt = "1.1.1"
actix-web = {version = "2.0.0", features = ["rustls"]}
bytes = "0.5.5"
env_logger = "0.7.1"
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
lazy_static = "1.4.0"
# line-messaging-api-rust = "0.1.1"
log = "0.4.8"
percent-encoding = "2.1.0"
regex = "1.3.9"
scraper = "0.12.0"
serde = "1.0.114"
serde_json = "1.0"
tokio = {version = "0.2", features = ["full"]}
